fixed schedule matching errors and detects overlaps with invitees

--- a/css/index.css
+++ b/css/index.css
@@ -51,6 +51,10 @@ SIGN-UP/LOG-IN
   width: 40%;
 }
 
+.numInputSm {
+  width: 30%;
+}
+
 .flexbox {
   display: flex;
   align-content: center;
